<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".elements.DirectionalButtonsFragment">

        <Button
        android:id="@+id/direcButtonN"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:text="@string/n"
        app:layout_constraintBottom_toTopOf="@+id/direcButtonS"
        app:layout_constraintEnd_toStartOf="@+id/direcButtonE"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/direcButtonW"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
        android:id="@+id/direcButtonE"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/e"
        app:layout_constraintBottom_toTopOf="@+id/direcButtonS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/direcButtonW"
        app:layout_constraintTop_toBottomOf="@+id/direcButtonN" />

        <Button
        android:id="@+id/direcButtonS"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/direcButtonE"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/direcButtonW"
        app:layout_constraintTop_toBottomOf="@+id/direcButtonN" />

        <Button
        android:id="@+id/direcButtonW"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/w"
        app:layout_constraintBottom_toTopOf="@+id/direcButtonS"
        app:layout_constraintEnd_toStartOf="@+id/direcButtonE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direcButtonN" />

        <TextView
        android:id="@+id/direcButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direcButtonS" />

</androidx.constraintlayout.widget.ConstraintLayout>